Cambios en el encoding.